--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@ p {
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0d9ae6;
+    background-color: #2589bd;
 }
 
 .benefit-lead {
@@ -109,7 +109,7 @@ p {
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: rgba(62, 207, 18, 0.986);
+    background-color: #0072bb;
     color: #ffffff;
 }
 /* consolidated classes from 3  to 1 */
